--- a/style.css
+++ b/style.css
@@ -54,15 +54,15 @@ img{
 main ul{
     list-style-type: none;
     margin: 0 auto;
-    padding: 1.3em;
+    padding: 1em;
 }
 
 main ul li{
     background: rgba(255,255,255,0.5);
     backdrop-filter: blur(5px);
-    border-radius: 50em;
+    border-radius: 12px;
     padding: 0.7em;
-    margin: 1.5em;
+    margin: 0.8em;
     text-align: center;
 }
 
