--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: linear-gradient(180deg,#262626, #1c1b1b);
+    background-image: linear-gradient(180deg,#262626, #1c1b1b);
     color: #fff;
 }
 
